FIX(Chat - Border status): don't cut off bottom border

--- a/src/friendsChatClient/chat/_messages.scss
+++ b/src/friendsChatClient/chat/_messages.scss
@@ -1,5 +1,6 @@
 [class*='messages_MsgWithAddons'] {
   background-color: rgb(var(--friendlist)) !important;
+  margin-top: 2px;
 
   [class*='reactions_MessageReactions'] {
     [class*='reactions_MessageReaction'] {
